--- a/.github/workflows/build-check.yml
+++ b/.github/workflows/build-check.yml
@@ -1,7 +1,7 @@
-name: Publish Docker image
+name: Build Check
 
 on:
-  push:
+  pull_request:
     branches: [main]
 
 concurrency:
@@ -9,33 +9,26 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build-and-push:
+  build-check:
+    name: Build Check
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build, tag, and push image
-        id: build-image
+      - name: Build image (validation only)
         uses: docker/build-push-action@v6.15.0
         with:
           context: .
-          push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          push: false
+          tags: ghcr.io/${{ github.repository }}:pr-check
           cache-from: type=gha,scope=image
           cache-to: type=gha,mode=max,scope=image
-  
+
+
