--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,6 +3,8 @@ name: Publish Docker image
 on:
   push:
     branches: [main]
+  schedule:
+    - cron: "0 6 */15 * *"
   workflow_dispatch:
 
 concurrency:
